--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "🧿𝐕𝐈𝐏 𝐒𝐓𝐑𝐈𝐍𝐆 𝐁𝐎𝐓🧿",
+  "name": "˹𝐒ᴛʀɪɴɢ 𝐒ᴇssɪᴏɴ˼🧿",
   "description": "A Telegram Bot to generate Telethon and Pyrogram String Sessions.",
-  "logo": "https://te.legra.ph/file/4a965d62670bf1c228639.jpg",
+  "logo": "https://files.catbox.moe/t57fdb.jpg",
   "keywords": [
     "telegram",
     "bot",
